<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/startStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/green"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="45dp"
            android:background="@color/red"
            android:text="@string/stop"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/driving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/leftButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/arrow"
            android:rotation="270" />

        <ProgressBar
            android:id="@+id/speedValueProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:max="100"
            android:progress="67"
            android:rotation="270"
            android:scaleX="3"
            android:scaleY="5" />

        <Button
            android:id="@+id/rightButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/arrow"
            android:rotation="90" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/speedInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/speedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedSpeed"
            android:textColor="@color/lightText"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/speedStartSpeed"
            android:textColor="@color/lightText"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/speedUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedUnit"
            android:textColor="@color/lightText"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/slowerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/slowerButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/arrow"
                android:rotation="180" />

            <TextView
                android:id="@+id/slowerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedSlower"
                android:textColor="@color/lightText"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fasterLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/fasterButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/arrow" />

            <TextView
                android:id="@+id/fasterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedFaster"
                android:textColor="@color/lightText"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>