<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetDistance">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/forBackWard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/forwardButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@color/darkBlue"
                    android:text="@string/distanceForward"
                    android:textColor="@color/lightText"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/backwardButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkBlue"
                    android:text="@string/distanceBackward"
                    android:textColor="@color/lightText"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/leftRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/leftButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@color/darkBlue"
                    android:text="@string/distanceRight"
                    android:textAllCaps="false"
                    android:textColor="@color/lightText"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/rightButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/darkBlue"
                    android:text="@string/distanceLeft"
                    android:textColor="@color/lightText"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/background_dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/commands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="90dp">

            </ListView>

            <LinearLayout
                android:id="@+id/startAbort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/abortButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/red"
                    android:text="@string/distanceAbort"
                    android:textColor="@color/lightText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/startButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/green"
                    android:gravity="center"
                    android:text="@string/start"
                    android:textColor="@color/lightText"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>