<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="bac"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallBackInformations">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBlue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/chooseInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/chooseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/callBackChooseInformation"
                android:textColor="@color/lightText"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/informationSpinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#3F51B5" />

            <TextView
                android:id="@+id/periodText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/callBackChooseTimePeriod"
                android:textColor="@android:color/background_light"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/timePeriodSpinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#3F51B5" />

            <LinearLayout
                android:id="@+id/startStop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/green"
                    android:text="@string/start"
                    android:textColor="@color/lightText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/stopButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/red"
                    android:text="@string/stop"
                    android:textColor="@color/lightText"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/informationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="ACCELERATION IN THE X AXIS"
                android:textColor="@android:color/background_light"
                android:textColorLink="#FFFFFF"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_margin="15dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/displayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/green"
                    android:gravity="center"
                    android:text="@string/callBackDisplay"
                    android:textColor="@color/lightText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/liveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/green"
                    android:gravity="center"
                    android:text="@string/callBackLive"
                    android:textColor="@color/lightText"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>